--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+		<audio id="stream" preload="none"></audio>
+		<!--		<script async src="https://analytics.potz.be/script.js" data-website-id="a68c4e75-09fa-4ce1-9b81-879fc80152d1"></script>-->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
